# x-diff

./: Cargo.toml  run.sh
examples/: config.rs  config_from_json.rs  similar.rs
fixtures/: test.json  test.yaml
src/: cli.rs  config.rs  lib.rs  main.rs  request.rs  response.rs  utils.rs
