[package]
name = "x-diff"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
clap = { version = "4.0.4", features = ["derive"] }
console = "0.15.2"
http-serde = "1.1.2"
reqwest = { version = "0.11.12", default-features = false, features = [
  "rustls-tls",
] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
serde_yaml = "0.9.13"
similar = { version = "2.2.0", features = ["inline"] }
tokio = { version = "1.21.2", features = ["full"] }
url = { version = "2.3.1", features = ["serde"] }
